new tileset + map + some tests about collision

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,10 @@ set(ASSETS_cg
 	assets-cg/spritesheet.png
 	assets-cg/characters/Tituya.char
 	assets-cg/characters/Lephenixnoir.char
+	assets-cg/characters/KikooDX.char
+	assets-cg/characters/Massena.char
+	assets-cg/characters/Tituya2.char
+	assets-cg/characters/PancarteVille.char
 )
 
 fxconv_declare_assets(${ASSETS} ${ASSETS_fx} ${ASSETS_cg} WITH_METADATA)
