--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,13 +13,14 @@ fxconv_declare_converters(assets-cg/converters.py)
 
 add_custom_command(
 	OUTPUT "${CMAKE_CURRENT_LIST_DIR}/assets-cg/maps/testCarte.json"
+	       "${CMAKE_CURRENT_LIST_DIR}/assets-cg/maps/inside/interior_1.json"
 	COMMENT "Convert tmx map to json"
 	COMMAND tiled --export-tileset json tileset.tsx tileset.json
 	COMMAND tiled --export-map json testCarte.tmx testCarte.json
 	COMMAND tiled --export-map json inside/interior_1.tmx inside/interior_1.json
 	WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/assets-cg/maps/
 	DEPENDS assets-cg/maps/testCarte.tmx assets-cg/tileset.png assets-cg/maps/tileset.tsx assets-cg/converters.py assets-cg/maps/inside/interior_1.tmx)
-	
+
 set(SOURCES
 	src/main.c
 	src/game.c
