now can walk out of house + random

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,13 +13,20 @@ fxconv_declare_converters(assets-cg/converters.py)
 
 add_custom_command(
 	OUTPUT "${CMAKE_CURRENT_LIST_DIR}/assets-cg/maps/testCarte.json"
-	       "${CMAKE_CURRENT_LIST_DIR}/assets-cg/maps/inside/interior_1.json"
+	       "${CMAKE_CURRENT_LIST_DIR}/assets-cg/maps/inside/1.json"
+	       "${CMAKE_CURRENT_LIST_DIR}/assets-cg/maps/inside/2.json"
 	COMMENT "Convert tmx map to json"
 	COMMAND tiled --export-tileset json tileset.tsx tileset.json
 	COMMAND tiled --export-map json testCarte.tmx testCarte.json
-	COMMAND tiled --export-map json inside/interior_1.tmx inside/interior_1.json
+	COMMAND tiled --export-map json inside/1.tmx inside/1.json
+	COMMAND tiled --export-map json inside/2.tmx inside/2.json
 	WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/assets-cg/maps/
-	DEPENDS assets-cg/maps/testCarte.tmx assets-cg/tileset.png assets-cg/maps/tileset.tsx assets-cg/converters.py assets-cg/maps/inside/interior_1.tmx)
+	DEPENDS assets-cg/maps/testCarte.tmx 
+	assets-cg/tileset.png 
+	assets-cg/maps/tileset.tsx 
+	assets-cg/converters.py 
+	assets-cg/maps/inside/1.tmx
+	assets-cg/maps/inside/2.tmx)
 
 set(SOURCES
 	src/main.c
@@ -37,7 +44,8 @@ set(SOURCES
 set(ASSETS_cg
 	assets-cg/tileset.png
 	assets-cg/maps/testCarte.json
-	assets-cg/maps/inside/interior_1.json
+	assets-cg/maps/inside/1.json
+	assets-cg/maps/inside/2.json
 	assets-cg/spritesheet.png
 )
 
