generate monster from json

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,7 @@ set(ASSETS_cg
 	assets-cg/uf8x9
 	assets-cg/capacites/capacites.txt
 	assets-cg/monsters/test.png
+	assets-cg/monsters/test.json
 )
 
 fxconv_declare_assets(${ASSETS} ${ASSETS_fx} ${ASSETS_cg} WITH_METADATA)
